<?xml version="1.0"?>
<package>
  <name>moveit_humanoid_stability</name>
  <version>0.0.1</version>
  <description>Humanoid stability functionality for MoveIt</description>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_humanoid_stability</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_humanoid_stability/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_humanoid_stability/</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>hrl_kinematics</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>hrl_kinematics</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/humanoid_constraint_sampler_plugin.xml"/>
  </export>

</package>
